# nta8035

./: Makefile  README.md  _config.yaml  index.md  pyproject.toml
_data/: downloads.tsv  minimaal.yaml
_includes/: def.html  prefixes.html
data/: nta8035.ttl
data/concat/: nta8035.rdf  nta8035.trig  nta8035.ttl
pages/: def.md  downloads.md
src/: gen-trig.py  static-page.py
