[tool.poetry]
name = "nta8035"
version = "1.0.0"
description = ""
authors = ["Redmer Kronemeijer <redmer.kronemeijer@crow.nl>"]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^5.4.1"
rdflib = "^5.0.0"
rdflib-jsonld = "^0.5.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
